--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -177,7 +177,7 @@
     "milanoPhoneNumber": "(+39) 02.76014323",
     "portofino": "Portofino",
     "calataMarconi": "Calata Marconi 14, 16034 Italy",
-    "portofinoPhoneNumber": "(+39) 0185.269241",
+    "portofinoPhoneNumber": "(+39) 0185269241",
     "bookAppointment": "Book an Appointment",
     "staffResponse": "Our staff will respond Monday to Friday from 9 AM to 7 PM and Saturday from 9 AM to 5 PM.",
     "title": "Title*",
@@ -231,10 +231,10 @@
     "cusiMilano": "Cusi Milano",
     "cusiPortofino": "Cusi Portofino",
     "liveChat": "LIVE CHAT",
-    "liveChatInfo": "Click here to chat live with an expert",
+    "liveChatInfo": "Live chat will be available soon",
     "bookOnline": "Click here to book an appointment online",
     "email": "gioielleriacusiecommerce@gmail.com",
-    "phone": "(+39) 0266019768"
+    "phone": "(+39) 02.76014323"
   },
 "cartmenu": {
     "yourbag": "Shopping Bag",
