--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -171,10 +171,10 @@
       "openingHours1": "10:30-13:30",
       "openingHours2": "15:00-19:00",
       "contactUs": "Contattaci",
-      "milanoPhoneNumber": "(+39) 0276014323",
+      "milanoPhoneNumber": "(+39) 02.76014323",
       "portofino": "Portofino",
       "calataMarconi": "Calata Marconi 14, 16034 Italia",
-      "portofinoPhoneNumber": "(+39) 0373214621",
+      "portofinoPhoneNumber": "(+39) 0185269241",
       "bookAppointment": "Prenota un appuntamento",
       "staffResponse": "Il nostro staff risponderà da lunedì a venerdì dalle 9 alle 19 e il sabato dalle 9 alle 17.",
       "title": "Titolo*",
@@ -228,10 +228,10 @@
     "cusiMilano": "Cusi Milano",
     "cusiPortofino": "Cusi Portofino",
     "liveChat": "CHAT DAL VIVO",
-    "liveChatInfo": "Clicca qui per parlare in tempo reale con un esperto",
+    "liveChatInfo": "Live chat attualmente non disponibile",
     "bookOnline": "Clicca qui per prenotare un appuntamento online",
     "email": "gioielleriacusiecommerce@gmail.com",
-    "phone": "(+39) 0266019768"
+    "phone": "(+39) 02.76014323"
   },
   "cartmenu": {
     "yourbag":"Shopping Bag",
